--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,7 +65,7 @@ html, body {
     background-color: #fff;
     padding: 20px;
     display: inline-block;
-    box-shadow: 0 2px 8px 1px rgb(0,0,0,0.05);
+    box-shadow: 0 2px 8px 1px rgb(0, 0, 0, 0.05);
     vertical-align: top;
     position: relative;
 }
@@ -327,9 +327,11 @@ input[type="text"]:focus {
 .progress-bar[style="width: 100%;"] {
     background-color: #32BEA6;
 }
+
 .progress-bar[style="width: 100%;"].failed {
     background-color: #DD2C00;
 }
+
 .progress-bar[style="width: 100%;"] .progress-bar-background {
     opacity: 0;
 }
@@ -352,9 +354,9 @@ input[type="text"]:focus {
 .update-asset {
     height: 24px;
     padding: 10px;
-    box-shadow: 0 1px 3px 1px rgb(0,0,0,0.05);
+    box-shadow: 0 1px 3px 1px rgb(0, 0, 0, 0.05);
     border-radius: 5px;
-    margin-top:10px;
+    margin-top: 10px;
 }
 
 .update-asset div {
@@ -389,13 +391,17 @@ input[type="text"]:focus {
     height: 24px;
     line-height: 12px;
     position: absolute;
-    top:20px;
-    right:20px;
+    top: 20px;
+    right: 20px;
 }
 
 .update-asset .progress {
     width: calc(100% - 231px);
     margin: 2px 0;
+}
+
+#download-list .update-asset .progress {
+    width: calc(100% - 141px)
 }
 
 .tooltip {
